--- a/Angular/eBarter/src/app/components/navbar/navbar.component.html
+++ b/Angular/eBarter/src/app/components/navbar/navbar.component.html
@@ -37,12 +37,13 @@
       </button>
 
 
-
+      <span class='pull-right'>
         <form class="form-inline my-2 my-lg-0">
           <input class="form-control mr-sm-2" type="search" placeholder="Username" aria-label="Username">
           <input class="form-control mr-sm-2" type="search" placeholder="Password" aria-label="Password">
-          <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Login</button>
+          <button class="btn btn-warning my-2 my-sm-0" type="submit">Login</button>
         </form>
+      </span>
 
 
     </span>
