working on navbars

--- a/Angular/eBarter/src/app/components/navbar/navbar.component.css
+++ b/Angular/eBarter/src/app/components/navbar/navbar.component.css
@@ -1,6 +1,15 @@
 
 #welcome {
-  font-weight: bold;
   font-style: italic;
-  color: white;
+}
+
+.spacer {
+  padding-left: 20px;
+}
+
+.navbar-text {
+  font-size: 100%;
+  font-weight: bold;
+  color: white !important;
+  display: inline-block;
 }
