worked on eviroments, homepage, item details, app module a bit

--- a/Angular/eBarter/src/app/components/item-detail/item-detail.component.html
+++ b/Angular/eBarter/src/app/components/item-detail/item-detail.component.html
@@ -1,3 +1,28 @@
-<p>
-  item-detail works!
-</p>
+<div class="container float-left">
+ <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner h-50 d-inline-block">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="https://i.ebayimg.com/images/g/WsUAAOSwsqxcNLBO/s-l1600.jpg" alt="First slide">
+    </div>
+</div>
+
+ <h2>Aqua Joe 2-Pack Adjustable Hose Nozzles | Smart Throttle | Colors Will Vary </h2>
+ <button class="btn btn-success">Submit Offer
+<!-- <form id="form" class="float-center" action="">
+  <br>
+  Name
+  <br>
+  <input type="text">
+  <br>
+  <br>
+  Description
+  <br>
+  <input type="text">
+  <br>
+  <br>
+  <input type="hidden">
+  <br>
+  <br>
+  <button class="btn btn-success">Submit Offer
+  </button>
+</form> -->
