--- a/Angular/eBarter/src/app/components/homepage/homepage.component.html
+++ b/Angular/eBarter/src/app/components/homepage/homepage.component.html
@@ -1,3 +1,145 @@
-<p>
-  homepage works!
-</p>
+<br>
+<br>
+<br>
+<!-- <div class="container float-left"> -->
+<!-- <img src="http://placehold.it/820x320" class="img-fluid" alt="Responsive image"> -->
+<!-- <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner h-50 d-inline-block">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="http://placehold.it/820x320" alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="http://placehold.it/820x320" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="http://placehold.it/820x320" alt="Third slide">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div> -->
+
+<h2>Listing Title </h2>
+<!-- <form id="form" class="float-center" action="">
+  <br>
+  <button>Test</button>
+  <br>
+  <br>
+  <button>Test</button>
+  <br>
+  <br>
+  <button>Test</button>
+  <br>
+  <br>
+  <input type="text">
+  <br>
+  <br>
+  <button class="btn btn-success">Submit Offer
+  </button>
+</form> -->
+<br>
+<br>
+<div class="col-md-3" id="sideBarLeft">
+  <p class="lead">Brands</p>
+  <div class="list-group">
+    <a class="list-group-item" ui-sref="main.watch" ui-sref-opts="{inherit: false}" href="#/">All</a>
+    <a class="list-group-item ng-binding ng-scope" ng-class="{'active': brand === vm.params.brand}"
+      ng-repeat="brand in vm.brands" ui-sref="main.watch({key: 'brand', value: brand})"
+      href="#/?key=brand&amp;value=MVMT">MVMT
+    </a>
+  </div>
+  <p class="lead">Colors</p>
+  <div class="list-group">
+    <a class="list-group-item" ui-sref="main.watch" ui-sref-opts="{inherit: false}" href="#/">All</a>
+    <a class="list-group-item ng-binding ng-scope" ng-class="{'active': color === vm.params.color}"
+      ng-repeat="color in vm.colors" ui-sref="main.watch({key: 'color', value: color})"
+      href="#/?key=color&amp;value=Silver">Silver
+    </a><a class="list-group-item ng-binding ng-scope" ng-class="{'active': color === vm.params.color}"
+      ng-repeat="color in vm.colors" ui-sref="main.watch({key: 'color', value: color})"
+      href="#/?key=color&amp;value=White">White
+    </a>
+  </div>
+  <p class="lead">Categories</p>
+  <div class="list-group">
+    <a class="list-group-item" ui-sref="main.watch" ui-sref-opts="{inherit: false}" href="#/">All</a>
+    <a class="list-group-item ng-binding ng-scope" ng-class="{'active': category === vm.params.category}"
+      ng-repeat="category in vm.categories" ui-sref="main.watch({key: 'category', value: category})"
+      href="#/?key=category&amp;value=MODERN%20SPORT%20SERIES">MODERN SPORT SERIES
+      <!-- ngIf: category === vm.params.value --></a><!-- end ngRepeat: category in vm.categories --><a
+      class="list-group-item ng-binding ng-scope" ng-class="{'active': category === vm.params.category}"
+      ng-repeat="category in vm.categories" ui-sref="main.watch({key: 'category', value: category})"
+      href="#/?key=category&amp;value=VOYAGER%20SERIES">VOYAGER SERIES
+      <!-- ngIf: category === vm.params.value --></a><!-- end ngRepeat: category in vm.categories -->
+  </div>
+</div>
+
+<div class="card-deck" style="width: 70rem;">
+  <div class="card">
+    <img class="card-img-top"
+      src="https://rukminim1.flixcart.com/image/332/398/watch/5/h/y/curren-8152-curren-original-imaecw9g7hqp85nw.jpeg?q=50"
+      alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This is a longer</p>
+      <button type="button" class="btn btn-success">Offer Up</button>
+    </div>
+  </div>
+  <div class="card">
+    <img class="card-img-top"
+      src="https://rukminim1.flixcart.com/image/332/398/watch/5/h/y/curren-8152-curren-original-imaecw9g7hqp85nw.jpeg?q=50"
+      alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This is a longer</p>
+      <button type="button" class="btn btn-success">Offer Up</button>
+    </div>
+  </div>
+  <div class="card">
+    <img class="card-img-top"
+      src="https://rukminim1.flixcart.com/image/332/398/watch/5/h/y/curren-8152-curren-original-imaecw9g7hqp85nw.jpeg?q=50"
+      alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This is a longer</p>
+      <button type="button" class="btn btn-success">Offer Up</button>
+    </div>
+  </div>
+  <div class="card">
+    <img class="card-img-top"
+      src="https://rukminim1.flixcart.com/image/332/398/watch/5/h/y/curren-8152-curren-original-imaecw9g7hqp85nw.jpeg?q=50"
+      alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This is a longer</p>
+      <button type="button" class="btn btn-success">Offer Up</button>
+    </div>
+  </div>
+  <div class="card">
+    <img class="card-img-top"
+      src="https://rukminim1.flixcart.com/image/332/398/watch/5/h/y/curren-8152-curren-original-imaecw9g7hqp85nw.jpeg?q=50"
+      alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This is a longer</p>
+      <button type="button" class="btn btn-success">Offer Up</button>
+    </div>
+  </div>
+</div>
+<br>
+<br>
+
+<div class="card" *ngFor="let item of items">
+  <div class="card-body">
+      <ul class="list-group">
+        <li class="list-group-item">ID : {{item.id}} </li>
+        <li class="list-group-item">description :{{item.name}}</li>
+        <li class="list-group-item">Category :{{item.isActive}}</li>
+      </ul>
+  </div>
+</div>
