--- a/Angular/eBarter/src/app/components/navbar/navbar.component.html
+++ b/Angular/eBarter/src/app/components/navbar/navbar.component.html
@@ -22,14 +22,15 @@
         <span (click)='navHome()'>eBarter!</span>
       </span>
       <span class='welcome'>The Web's Most Exciting Marketplace!</span>
-      <span class='spacer'></span>
       <span class='float-right'>
           <form>
             <input class='login-box' type="text" placeholder="Username" aria-label="Username">
-            <span class='spacer'></span>
+            <span class='spacer-sm'></span>
             <input class='login-box' type="text" placeholder="Password" aria-label="Password">
-            <span class='spacer'></span>
-            <button class="btn btn-warning" type="submit">Login</button>
+            <span class='spacer-sm'></span>
+            <button class="btn btn-success" id='login-button' type="submit">Login</button>
+            <span class='spacer-sm'></span>
+            <button (click)='navRegister()' class="btn btn-warning" id='register-button' type="submit">Register</button>
           </form>
         </span>
       </div>
