--- a/Angular/eBarter/src/app/components/item-detail/item-detail.component.html
+++ b/Angular/eBarter/src/app/components/item-detail/item-detail.component.html
@@ -1,28 +1,28 @@
-<div class="container float-left">
- <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner h-50 d-inline-block">
-    <div class="carousel-item active">
-      <img class="d-block w-100" src="https://i.ebayimg.com/images/g/WsUAAOSwsqxcNLBO/s-l1600.jpg" alt="First slide">
-    </div>
+<!-- <div class="container float-left">
+  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <img src="https://www.broadwayproscooters.com/media/catalog/product/cache/1/image/445x/602f0fa2c1f0d1ba5e241f914e856ff9/e/n/env1417.jpeg  " alt="First slide">
+      </div>
+    </div> -->
+<div class="imageLocation">
+  ​<picture>
+    <source
+      srcset="https://www.dunkindonuts.com/content/dam/dd/img/heros-lifestyle/standard/hero-ddcard-lp-donuts-card-640x640.jpg"
+      type="image/svg+xml">
+    <img src="..." class="img-fluid img-thumbnail" alt="...">
+  </picture>
 </div>
+<ul class="list-group" id="information-on-item">
+  <li class="list-group-item">First item</li>
+  <li class="list-group-item">Second item</li>
+  <li class="list-group-item">Third item</li>
+  <li class="list-group-item">Fourth item</li>
+  <li class="list-group-item">Firth item</li>
+  <li class="list-group-item">Test item</li>
+  <br>
+  <button class="btn btn-success" data-toggle="modal" id="SubmitOffer">Submit Offer</button>
+</ul>
 
- <h2>Aqua Joe 2-Pack Adjustable Hose Nozzles | Smart Throttle | Colors Will Vary </h2>
- <button class="btn btn-success">Submit Offer
-<!-- <form id="form" class="float-center" action="">
-  <br>
-  Name
-  <br>
-  <input type="text">
-  <br>
-  <br>
-  Description
-  <br>
-  <input type="text">
-  <br>
-  <br>
-  <input type="hidden">
-  <br>
-  <br>
-  <button class="btn btn-success">Submit Offer
-  </button>
-</form> -->
+<div class="form-group" id="">
+  <label for="comment">Comment:</label>
+  <textarea class="form-control" rows="6" id="comment"></textarea>
+</div>
