--- a/Angular/eBarter/src/app/components/item-detail/item-detail.component.css
+++ b/Angular/eBarter/src/app/components/item-detail/item-detail.component.css
@@ -5,43 +5,31 @@
   width: 425px;
   height: 300px;
   /* margin: 30px auto 0; */
-  /* margin-left: 70%;
+/* margin-left: 70%;
   background-color: #e2e2e2;
   -webkit-box-shadow: 10px 10px 14px 0px rgba(0, 0, 0, 0.43);
   -moz-box-shadow: 10px 10px 14px 0px rgba(0, 0, 0, 0.43);
   box-shadow: 10px 10px 14px 0px rgba(0, 0, 0, 0.43); */
 
 /* }  */
+img {
+  width: 300px;
+  height: 300px;
+  -webkit-box-shadow: 7px 2px 18px 5px rgba(0, 0, 0, 0.43);
+  -moz-box-shadow: 7px 2px 18px 5px rgba(0, 0, 0, 0.43);
+  box-shadow: 7px 2px 18px 5px rgba(0, 0, 0, 0.43);
+  border-radius: 8px;
+  margin-top: 10%;
+  margin-left: 20%;
+}
 
-button{
+ul {
   text-align: center;
   position: relative;
-  bottom: 320px;
-  margin-left: 80%;
-}
-
-.w-100 {
-  width: 60% !important;
-  margin-top: 5%;
-}
-
-input{
-  text-align: left;
-}
-
-img{
-  -webkit-box-shadow: 10px 10px 14px 0px rgba(0, 0, 0, 0.43);
-  -moz-box-shadow: 10px 10px 14px 0px rgba(0, 0, 0, 0.43);
-  box-shadow: 10px 10px 14px 0px rgba(0, 0, 0, 0.43);
-  width: 40%;
-  height: 450px;
-}
-h2{
-  text-align: center;
-  position: relative;
-  bottom: 420px;
+  bottom: 300px;
+  margin-left: 50%;
   width: 425px;
   height: 300px;
-  /* margin: 30px auto 0; */
-  margin-left: 70%;
 }
+
+
