Added some details to item detail component

--- a/Angular/eBarter/src/app/components/homepage/homepage.component.html
+++ b/Angular/eBarter/src/app/components/homepage/homepage.component.html
@@ -22,7 +22,7 @@
   <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
-  </a>
+  </a>Ï
 </div> -->
 
 <h2>Listing Title </h2>
@@ -51,7 +51,7 @@
     <a class="list-group-item" ui-sref="main.watch" ui-sref-opts="{inherit: false}" href="#/">All</a>
     <a class="list-group-item ng-binding ng-scope" ng-class="{'active': brand === vm.params.brand}"
       ng-repeat="brand in vm.brands" ui-sref="main.watch({key: 'brand', value: brand})"
-      href="#/?key=brand&amp;value=MVMT">MVMT
+      href="#/?key=brand&amp;value=MVMT">Test
     </a>
   </div>
   <p class="lead">Colors</p>
@@ -70,11 +70,11 @@
     <a class="list-group-item" ui-sref="main.watch" ui-sref-opts="{inherit: false}" href="#/">All</a>
     <a class="list-group-item ng-binding ng-scope" ng-class="{'active': category === vm.params.category}"
       ng-repeat="category in vm.categories" ui-sref="main.watch({key: 'category', value: category})"
-      href="#/?key=category&amp;value=MODERN%20SPORT%20SERIES">MODERN SPORT SERIES
+      href="#/?key=category&amp;value=MODERN%20SPORT%20SERIES">TEST SPORT SERIES
       <!-- ngIf: category === vm.params.value --></a><!-- end ngRepeat: category in vm.categories --><a
       class="list-group-item ng-binding ng-scope" ng-class="{'active': category === vm.params.category}"
       ng-repeat="category in vm.categories" ui-sref="main.watch({key: 'category', value: category})"
-      href="#/?key=category&amp;value=VOYAGER%20SERIES">VOYAGER SERIES
+      href="#/?key=category&amp;value=VOYAGER%20SERIES">TEST SERIES
       <!-- ngIf: category === vm.params.value --></a><!-- end ngRepeat: category in vm.categories -->
   </div>
 </div>
