Fixed carousel, changed default font

--- a/Angular/eBarter/src/app/components/item-detail/item-detail.component.html
+++ b/Angular/eBarter/src/app/components/item-detail/item-detail.component.html
@@ -18,10 +18,12 @@
     <li class="list-group-item">Fourth item</li>
     <li class="list-group-item">Firth item</li>
     <li class="list-group-item">Test item</li>
+    <app-ngbd-modal-config></app-ngbd-modal-config>
     <br>
-    <button class="btn btn-success" data-toggle="modal" id="SubmitOffer">Submit Offer</button>
+    <!-- <button class="btn btn-success" data-toggle="modal" id="SubmitOffer">Submit Offer</button> -->
   </ul>
 </div>
+
 <br>
 <br>
 <div class="container" id="tableForOffers">
@@ -56,3 +58,4 @@
     </tbody>
   </table>
 </div>
+<app-ngbd-carousel-basic></app-ngbd-carousel-basic>
