--- a/Angular/eBarter/src/app/components/navbar/navbar.component.html
+++ b/Angular/eBarter/src/app/components/navbar/navbar.component.html
@@ -23,12 +23,12 @@
       </span>
       <span class='welcome'>The Web's Most Exciting Marketplace!</span>
       <span class='float-right'>
-          <form>
-            <input class='login-box' type="text" placeholder="Username" aria-label="Username">
+          <form loginform>
+            <input class='login-box' type='text' placeholder='username' name='username' id='namebox' [(ngModel)]='logincombo.username'>
             <span class='spacer-sm'></span>
-            <input class='login-box' type="text" placeholder="Password" aria-label="Password">
+            <input class='login-box' type='password' placeholder='password' name='password' id='passwordbox' [(ngModel)]='logincombo.password'>
             <span class='spacer-sm'></span>
-            <button class="btn btn-success" id='login-button' type="submit">Login</button>
+            <button (click)='navLogin()' class='btn btn-success' id='login-button' type="submit">Login</button>
             <span class='spacer-sm'></span>
             <button (click)='navRegister()' class="btn btn-warning" id='register-button' type="submit">Register</button>
           </form>
