--- a/Angular/eBarter/src/app/components/profile/profile.component.html
+++ b/Angular/eBarter/src/app/components/profile/profile.component.html
@@ -1,44 +1,112 @@
-<div class='container-fluid'>
-<h2>User Profile</h2>
-</div>
+<body>
+  <div class='container'>
+    <div class="row">
+      <div class="col-sm-3"></div>
+      <div id="box" class="col-sm-7">
+        <div id="info" *ngIf="!editUser">
+          <h2>User Profile</h2>
 
-<button (click)="submitEditUser()" class="btn btn-primary">Edit Profile</button>
+          <br>
+          <table class="table table-striped">
+            <tr>
+              <td>
+                <h4>Username:</h4>
+              </td>
+              <td class="rightTable">{{user.userName}}</td>
+            </tr>
+            <tr>
+              <td>First Name:</td>
+              <td class="rightTable">{{user.firstName}}</td>
+            </tr>
+            <tr>
+              <td>Last Name:</td>
+              <td class="rightTable">{{user.lastName}}</td>
+            </tr>
+            <tr>
+              <td>Email:</td>
+              <td class="rightTable">{{user.email}}</td>
+            </tr>
+            <tr>
+              <td>Street:</td>
+              <td class="rightTable">{{user.addressId.street}}</td>
+            </tr>
+            <tr>
+              <td>States:</td>
+              <td class="rightTable">{{user.addressId.states}}</td>
+            </tr>
+            <tr>
+              <td>Zipcode:</td>
+              <td class="rightTable">{{user.addressId.zipcode}}</td>
+            </tr>
 
-<div id="info" *ngIf='editUser'>
-  <form>
-    <tbody>
-      <tr>
-        <td>First Name:</td>
-        <td><input type='text' name='firstName' value='{{user.firstName}}' [(ngModel)]='user.firstName'></td>
-      </tr>
-      <tr>
-        <td>Last Name:</td>
-        <td><input type='text' name='lastName' value='{{user.lastName}}' [(ngModel)]='user.lastName'></td>
-      </tr>
-      <tr>
-        <td>Username:</td>
-        <td><input type='text' name='userName' value='{{user.userName}}' [(ngModel)]='user.userName'></td>
-      </tr>
-      <tr>
-        <td>Password:</td>
-        <td><input type='password' name='password' value='{{user.password}}' [(ngModel)]='user.password'></td>
-      </tr>
-      <tr>
-        <td>Email:</td>
-        <td><input type='email' name='email' value='{{user.email}}' [(ngModel)]='user.email'></td>
-      </tr>
-      <tr>
-        <td>Street:</td>
-        <td><input type='text' name='street' value='{{user.address.street}}' [(ngModel)]='user.address.street'></td>
-      </tr>
-      <tr>
-        <td>States:</td>
-        <td><input type='text' name='states' value='{{user.address.states}}' [(ngModel)]='user.address.states'></td>
-      </tr>
-      <tr>
-        <td>Zipcode:</td>
-        <td><input type='text' name='firstName' value='{{user.address.zipcode}}' [(ngModel)]='user.address.zipcode'></td>
-      </tr>
-    </tbody>
-  </form>
-</div>
+          </table>
+        </div>
+
+
+        <button (click)="selectEditUser()" class="btn btn-primary">Edit Profile</button>
+
+        <div id="info" *ngIf='editUser'>
+          <form>
+            <table class="table table-striped">
+              <tbody>
+                <tr>
+                  <td>First Name:</td>
+                  <td><input type='text' name='firstName' value='{{user.firstName}}' [(ngModel)]='user.firstName'></td>
+                </tr>
+
+                <tr>
+                  <td>Last Name:</td>
+                  <td><input type='text' name='lastName' value='{{user.lastName}}' [(ngModel)]='user.lastName'></td>
+                </tr>
+
+                <tr>
+                  <td>Username:</td>
+                  <td><input type='text' name='userName' value='{{user.userName}}' [(ngModel)]='user.userName'></td>
+                </tr>
+
+                <tr>
+                  <td>Password:</td>
+                  <td><input type='password' name='password' value='{{user.password}}' [(ngModel)]='user.password'></td>
+                </tr>
+
+                <tr>
+                  <td>Email:</td>
+                  <td><input type='email' name='email' value='{{user.email}}' [(ngModel)]='user.email'></td>
+                </tr>
+
+                <tr>
+                  <td>Street:</td>
+                  <td><input type='text' name='street' value='{{user.address.street}}'
+                      [(ngModel)]='user.address.street'>
+                  </td>
+                </tr>
+
+                <tr>
+                  <td>States:</td>
+                  <td><input type='text' name='states' value='{{user.address.states}}'
+                      [(ngModel)]='user.address.states'>
+                  </td>
+                </tr>
+
+                <tr>
+                  <td>Zipcode:</td>
+                  <td><input type='text' name='firstName' value='{{user.address.zipcode}}'
+                      [(ngModel)]='user.address.zipcode'></td>
+                </tr>
+              </tbody>
+            </table>
+          </form>
+        </div>
+      </div>
+    </div>
+    <div class="row" id="matchRow">
+      <div class="col-sm-2"></div>
+      <div class="col-lg-8">
+      </div>
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
+  </div>
+</body>
