login/logout works

--- a/Angular/eBarter/src/app/components/navbar/navbar.component.html
+++ b/Angular/eBarter/src/app/components/navbar/navbar.component.html
@@ -14,7 +14,7 @@
       </span>
     </span>
       <span>The Web's Most Exciting Marketplace!</span>
-      <span class='float-right welcome'>Welcome USERNAME</span>
+      <span class='float-right welcome'>Welcome {{displayName}}</span>
   </div>
 
     <div *ngIf='loginnavbar'>
