--- a/Angular/eBarter/src/app/components/ngbd-carousel-basic/ngbd-carousel-basic.component.html
+++ b/Angular/eBarter/src/app/components/ngbd-carousel-basic/ngbd-carousel-basic.component.html
@@ -1,22 +1,22 @@
 
 <ngb-carousel *ngIf="images">
     <ng-template ngbSlide>
-      <img [src]="images[0]" alt="Random first slide">
+      <img src="https://media.giphy.com/media/l2QZZeDfBr3ypiHT2/giphy.gif" alt="Random first slide">
       <div class="carousel-caption">
-        <h3>First slide label</h3>
-        <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+        <!-- <h3>First slide label</h3>
+        <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p> -->
       </div>
     </ng-template>
     <ng-template ngbSlide>
-      <img [src]="images[1]" alt="Random second slide">
+      <img src="https://media3.giphy.com/media/l2R0aKwejYr8ycKAg/source.gif" alt="Random second slide">
       <div class="carousel-caption">
-        <h3>Second slide label</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <!-- <h3>Second slide label</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p> -->
       </div>
     </ng-template>
     <ng-template ngbSlide>
-      <img [src]="images[2]" alt="Random third slide">
+      <img src="https://media0.giphy.com/media/3oriNY7jFpuXvzBBTO/source.gif" alt="Random third slide">
       <div class="carousel-caption">
-        <h3>Third slide label</h3>
-        <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+        <!-- <h3>Third slide label</h3>
+        <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p> -->
       </div>
