--- a/Angular/eBarter/src/app/components/homepage/homepage.component.html
+++ b/Angular/eBarter/src/app/components/homepage/homepage.component.html
@@ -25,24 +25,8 @@
   </a>Ï
 </div> -->
 
-<h2>Listing Title </h2>
-<!-- <form id="form" class="float-center" action="">
-  <br>
-  <button>Test</button>
-  <br>
-  <br>
-  <button>Test</button>
-  <br>
-  <br>
-  <button>Test</button>
-  <br>
-  <br>
-  <input type="text">
-  <br>
-  <br>
-  <button class="btn btn-success">Submit Offer
-  </button>
-</form> -->
+<br>
+<br>
 <br>
 <br>
 <div class="col-md-3" id="sideBarLeft">
@@ -79,67 +63,90 @@
   </div>
 </div>
 
-<div class="card-deck" style="width: 70rem;">
+<div class="card-deck" style="width: 70rem;" *ngFor="let item of items">
   <div class="card">
     <img class="card-img-top"
       src="https://rukminim1.flixcart.com/image/332/398/watch/5/h/y/curren-8152-curren-original-imaecw9g7hqp85nw.jpeg?q=50"
       alt="Card image cap">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a longer</p>
-      <button type="button" class="btn btn-success">Offer Up</button>
-    </div>
-  </div>
-  <div class="card">
-    <img class="card-img-top"
-      src="https://rukminim1.flixcart.com/image/332/398/watch/5/h/y/curren-8152-curren-original-imaecw9g7hqp85nw.jpeg?q=50"
-      alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a longer</p>
-      <button type="button" class="btn btn-success">Offer Up</button>
-    </div>
-  </div>
-  <div class="card">
-    <img class="card-img-top"
-      src="https://rukminim1.flixcart.com/image/332/398/watch/5/h/y/curren-8152-curren-original-imaecw9g7hqp85nw.jpeg?q=50"
-      alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a longer</p>
-      <button type="button" class="btn btn-success">Offer Up</button>
-    </div>
-  </div>
-  <div class="card">
-    <img class="card-img-top"
-      src="https://rukminim1.flixcart.com/image/332/398/watch/5/h/y/curren-8152-curren-original-imaecw9g7hqp85nw.jpeg?q=50"
-      alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a longer</p>
-      <button type="button" class="btn btn-success">Offer Up</button>
-    </div>
-  </div>
-  <div class="card">
-    <img class="card-img-top"
-      src="https://rukminim1.flixcart.com/image/332/398/watch/5/h/y/curren-8152-curren-original-imaecw9g7hqp85nw.jpeg?q=50"
-      alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a longer</p>
-      <button type="button" class="btn btn-success">Offer Up</button>
+      <ngb-rating [(rate)]="currentRate"></ngb-rating>
+      <hr>
+      <pre>Rate: <b>{{currentRate}}</b></pre>
+      <h5 class="card-title">{{item.id}}</h5>
+      <p class="card-text">{{item.name}}</p>
+      <p class="card-text">{{item.description}}</p>
+      <a href="item" class="btn btn-success">
+        <input type="hidden" value="{{item.id}}">
+        <span class="button--inner" >Offer Up</span>
+      </a>
+      <br>
+      <hr>
     </div>
   </div>
 </div>
-<br>
 <br>
 
-<div class="card" *ngFor="let item of items">
-  <div class="card-body">
-      <ul class="list-group">
-        <li class="list-group-item">ID : {{item.id}} </li>
-        <li class="list-group-item">description :{{item.name}}</li>
-        <li class="list-group-item">Category :{{item.isActive}}</li>
-      </ul>
+<!-- <div class="card-deck" style="width: 70rem;">
+  <div class="card">
+    <img class="card-img-top"
+      src="https://rukminim1.flixcart.com/image/332/398/watch/5/h/y/curren-8152-curren-original-imaecw9g7hqp85nw.jpeg?q=50"
+      alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This is a longer</p>
+      <button type="button" class="btn btn-success">Offer Up</button>
+    </div>
   </div>
-</div>
+  <div class="card">
+    <img class="card-img-top"
+      src="https://rukminim1.flixcart.com/image/332/398/watch/5/h/y/curren-8152-curren-original-imaecw9g7hqp85nw.jpeg?q=50"
+      alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This is a longer</p>
+      <button type="button" class="btn btn-success">Offer Up</button>
+    </div>
+  </div>
+  <div class="card">
+    <img class="card-img-top"
+      src="https://rukminim1.flixcart.com/image/332/398/watch/5/h/y/curren-8152-curren-original-imaecw9g7hqp85nw.jpeg?q=50"
+      alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This is a longer</p>
+      <button type="button" class="btn btn-success">Offer Up</button>
+    </div>
+  </div>
+  <div class="card">
+    <img class="card-img-top"
+      src="https://rukminim1.flixcart.com/image/332/398/watch/5/h/y/curren-8152-curren-original-imaecw9g7hqp85nw.jpeg?q=50"
+      alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This is a longer</p>
+      <button type="button" class="btn btn-success">Offer Up</button>
+    </div>
+  </div>
+  <div class="card">
+    <img class="card-img-top"
+      src="https://rukminim1.flixcart.com/image/332/398/watch/5/h/y/curren-8152-curren-original-imaecw9g7hqp85nw.jpeg?q=50"
+      alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This is a longer</p>
+      <button type="button" class="btn btn-success">Offer Up</button>
+    </div>
+  </div>
+</div> -->
+<!-- <br>
+<br>
+<div class="card" *ngFor="let item of items">
+  <ul class="list-group">
+    <li class="list-group-item">ID : {{item.id}} </li>
+    <li class="list-group-item">Author :{{item.authorName}}</li>
+    <li class="list-group-item">Category :{{item.category}}</li>
+  </ul>
+  <button (click)="removeBook(book)" class="btn btn-danger">X</button>
+  <button (click)="editBook(book)" class="btn btn-success">^</button>
+  <hr>
+</div> -->
