--- a/Angular/eBarter/src/app/components/item-detail/item-detail.component.html
+++ b/Angular/eBarter/src/app/components/item-detail/item-detail.component.html
@@ -3,7 +3,28 @@
         <img src="https://www.broadwayproscooters.com/media/catalog/product/cache/1/image/445x/602f0fa2c1f0d1ba5e241f914e856ff9/e/n/env1417.jpeg  " alt="First slide">
       </div>
     </div> -->
+     <!-- <div class="card-deck" style="width: 70rem;">
+        <div class="card">
+          <img class="card-img-top"src="https://rukminim1.flixcart.com/image/332/398/watch/5/h/y/curren-8152-curren-original-imaecw9g7hqp85nw.jpeg?q=50" alt="Card image cap">
+          <div class="card-body">
+             <ngb-rating [(rate)]="currentRate"></ngb-rating> -->
+            <!-- <hr> -->
+            <!-- <pre>Rate: <b>{{currentRate}}</b></pre> -->
+            <!-- <p class="card-text">{{item.name}}</p>
+            <p class="card-text">{{item.description}}</p>
+            <a href="item" class="btn btn-success">
+              <input type="hidden" value="{{item.id}}">
+              <span class="button--inner" >Offer Up</span>
+            </a>
+            <br>
+            <hr>
+          </div>
+        </div>
+      </div>
+      <br> -->
+
 <div class="imageLocation">
+
   ​<picture>
     <source
       srcset="https://www.dunkindonuts.com/content/dam/dd/img/heros-lifestyle/standard/hero-ddcard-lp-donuts-card-640x640.jpg"
@@ -11,23 +32,21 @@
     <img src="..." class="img-fluid img-thumbnail" alt="...">
   </picture>
   <ul class="list-group" id="information-on-item">
-    <h1>{{title}}</h1>
-    <li class="list-group-item">First item</li>
-    <li class="list-group-item">Second item</li>
-    <li class="list-group-item">Third item</li>
-    <li class="list-group-item">Fourth item</li>
-    <li class="list-group-item">Firth item</li>
-    <li class="list-group-item">Test item</li>
+    <h1>{{item.name}}</h1>
+    <li class="list-group-item">{{item.id}}</li>
+    <li class="list-group-item">{{item.description}}</li>
+    <li class="list-group-item">{{item.name}}</li>
+    <li class="list-group-item">{{item.endDate}}</li>
     <br>
     <app-ngbd-modal-config></app-ngbd-modal-config>
     <br>
-    <!-- <button class="btn btn-success" data-toggle="modal" id="SubmitOffer">Submit Offer</button> -->
-  </ul>
+  <!-- <button class="btn btn-success" data-toggle="modal" id="SubmitOffer">Submit Offer</button> -->
+   </ul>
 </div>
 
 <br>
 <br>
-<div class="container" id="tableForOffers">
+ <div class="container" id="tableForOffers">
   <table class="table table-sm">
     <thead>
       <tr>
@@ -59,4 +78,4 @@
     </tbody>
   </table>
 </div>
-<app-ngbd-carousel-basic></app-ngbd-carousel-basic>
+<!-- <app-ngbd-carousel-basic></app-ngbd-carousel-basic> -->
