profile page works

--- a/Angular/eBarter/src/app/components/navbar/navbar.component.css
+++ b/Angular/eBarter/src/app/components/navbar/navbar.component.css
@@ -1,4 +1,3 @@
-
 .welcome {
   font-style: italic;
 }
@@ -11,6 +10,9 @@
   height: 50px;
   line-height: 50px;
   text-align: center;
+  top: 0;
+  position: fixed;
+  z-index:999;
 }
 
 .spacer {
