--- a/Angular/eBarter/src/app/components/navbar/navbar.component.html
+++ b/Angular/eBarter/src/app/components/navbar/navbar.component.html
@@ -10,6 +10,8 @@
           <button (click)='navCompleted()'ngbDropdownItem>My Completed Deals</button>
           <button (click)='navProfile()'ngbDropdownItem>My Profile</button>
           <button (click)='navLogout()'ngbDropdownItem>Logout</button>
+          <!-- DELETE LINE BELOW -->
+          <button (click)='navGetUser()'ngbDropdownItem>Get User (for testing)</button>
         </div>
       </span>
     </span>
