Rob committed to master from Eric's computer

--- a/Angular/eBarter/src/app/components/homepage/homepage.component.html
+++ b/Angular/eBarter/src/app/components/homepage/homepage.component.html
@@ -32,33 +32,24 @@
 <div class="col-md-3" id="sideBarLeft">
   <p class="lead">Brands</p>
   <div class="list-group">
-    <a class="list-group-item" ui-sref="main.watch" ui-sref-opts="{inherit: false}" href="#/">All</a>
-    <a class="list-group-item ng-binding ng-scope" ng-class="{'active': brand === vm.params.brand}"
-      ng-repeat="brand in vm.brands" ui-sref="main.watch({key: 'brand', value: brand})"
-      href="#/?key=brand&amp;value=MVMT">Test
+    <a class="list-group-item" href="#/">All</a>
+    <a class="list-group-item ng-binding ng-scope" >Test
     </a>
   </div>
   <p class="lead">Colors</p>
   <div class="list-group">
-    <a class="list-group-item" ui-sref="main.watch" ui-sref-opts="{inherit: false}" href="#/">All</a>
+    <a class="list-group-item" href="#/" href="#/">All</a>
     <a class="list-group-item ng-binding ng-scope" ng-class="{'active': color === vm.params.color}"
-      ng-repeat="color in vm.colors" ui-sref="main.watch({key: 'color', value: color})"
-      href="#/?key=color&amp;value=Silver">Silver
-    </a><a class="list-group-item ng-binding ng-scope" ng-class="{'active': color === vm.params.color}"
-      ng-repeat="color in vm.colors" ui-sref="main.watch({key: 'color', value: color})"
-      href="#/?key=color&amp;value=White">White
+      ng-repeat="color in vm.colors" href="#/">Silver
+    </a><a class="list-group-item ng-binding ng-scope" href="#/">White
     </a>
   </div>
   <p class="lead">Categories</p>
   <div class="list-group">
-    <a class="list-group-item" ui-sref="main.watch" ui-sref-opts="{inherit: false}" href="#/">All</a>
-    <a class="list-group-item ng-binding ng-scope" ng-class="{'active': category === vm.params.category}"
-      ng-repeat="category in vm.categories" ui-sref="main.watch({key: 'category', value: category})"
-      href="#/?key=category&amp;value=MODERN%20SPORT%20SERIES">TEST SPORT SERIES
+    <a class="list-group-item"href="#/">All</a>
+    <a class="list-group-item ng-binding ng-scope" href="#/" >TEST SPORT SERIES
       <!-- ngIf: category === vm.params.value --></a><!-- end ngRepeat: category in vm.categories --><a
-      class="list-group-item ng-binding ng-scope" ng-class="{'active': category === vm.params.category}"
-      ng-repeat="category in vm.categories" ui-sref="main.watch({key: 'category', value: category})"
-      href="#/?key=category&amp;value=VOYAGER%20SERIES">TEST SERIES
+      class="list-group-item ng-binding ng-scope"href="#/">TEST SERIES
       <!-- ngIf: category === vm.params.value --></a><!-- end ngRepeat: category in vm.categories -->
   </div>
 </div>
