--- a/Angular/eBarter/src/app/components/homepage/homepage.component.css
+++ b/Angular/eBarter/src/app/components/homepage/homepage.component.css
@@ -22,6 +22,7 @@ img {
   margin-bottom: 10px;
   margin-left: 15px;
   max-width: 320px;
+  margin-top: 30px;
 }
 
 .card-deck {
@@ -29,6 +30,7 @@ img {
   bottom: 710px;
   position: relative;
   text-align: center;
+
 }
 
 body {
