profile admin features work

--- a/Angular/eBarter/src/app/components/profile/profile.component.css
+++ b/Angular/eBarter/src/app/components/profile/profile.component.css
@@ -1,3 +1,15 @@
 .spacer {
   padding-left: 20px;
 }
+
+.spacer-sm {
+  padding-left: 10px;
+}
+
+.green {
+  color: green;
+}
+
+.red {
+  color: red;
+}
