--- a/Angular/eBarter/src/app/components/item-detail/item-detail.component.html
+++ b/Angular/eBarter/src/app/components/item-detail/item-detail.component.html
@@ -3,14 +3,14 @@
         <img src="https://www.broadwayproscooters.com/media/catalog/product/cache/1/image/445x/602f0fa2c1f0d1ba5e241f914e856ff9/e/n/env1417.jpeg  " alt="First slide">
       </div>
     </div> -->
-     <!-- <div class="card-deck" style="width: 70rem;">
+<!-- <div class="card-deck" style="width: 70rem;">
         <div class="card">
           <img class="card-img-top"src="https://rukminim1.flixcart.com/image/332/398/watch/5/h/y/curren-8152-curren-original-imaecw9g7hqp85nw.jpeg?q=50" alt="Card image cap">
           <div class="card-body">
              <ngb-rating [(rate)]="currentRate"></ngb-rating> -->
-            <!-- <hr> -->
-            <!-- <pre>Rate: <b>{{currentRate}}</b></pre> -->
-            <!-- <p class="card-text">{{item.name}}</p>
+<!-- <hr> -->
+<!-- <pre>Rate: <b>{{currentRate}}</b></pre> -->
+<!-- <p class="card-text">{{item.name}}</p>
             <p class="card-text">{{item.description}}</p>
             <a href="item" class="btn btn-success">
               <input type="hidden" value="{{item.id}}">
@@ -22,9 +22,7 @@
         </div>
       </div>
       <br> -->
-
 <div class="imageLocation">
-
   ​<picture>
     <source
       srcset="https://www.dunkindonuts.com/content/dam/dd/img/heros-lifestyle/standard/hero-ddcard-lp-donuts-card-640x640.jpg"
@@ -32,50 +30,55 @@
     <img src="..." class="img-fluid img-thumbnail" alt="...">
   </picture>
   <ul class="list-group" id="information-on-item">
-    <h1>{{item.name}}</h1>
-    <li class="list-group-item">{{item.id}}</li>
     <li class="list-group-item">{{item.description}}</li>
     <li class="list-group-item">{{item.name}}</li>
     <li class="list-group-item">{{item.endDate}}</li>
     <br>
     <app-ngbd-modal-config></app-ngbd-modal-config>
     <br>
-  <!-- <button class="btn btn-success" data-toggle="modal" id="SubmitOffer">Submit Offer</button> -->
-   </ul>
+  </ul>
 </div>
 
 <br>
 <br>
- <div class="container" id="tableForOffers">
+ <div class="container" *ngFor="let offer of offers" id="tableForOffers">
   <table class="table table-sm">
     <thead>
       <tr>
-        <th scope="col"></th>
+        <th scope="col">#</th>
         <th scope="col">UserName</th>
-        <th scope="col">Offer</th>
+        <th scope="col">Offer Description</th>
+        <th scope="col">User</th>
         <th scope="col">Accept</th>
       </tr>
     </thead>
     <tbody>
       <tr>
-        <th scope="row">1</th>
-        <td>Mark</td>
-        <td>Otto</td>
-        <td> <button class="btn btn-success">Accept</button></td>
-      </tr>
-      <tr>
-        <th scope="row">2</th>
-        <td>Chair</td>
-        <td>Car</td>
-        <td> <button class="btn btn-success">Accept</button></td>
-      </tr>
-      <tr>
-        <th scope="row">3</th>
-        <td>Chair</td>
-        <td>Car</td>
-        <td> <button class="btn btn-success">Accept</button></td>
+        <th scope="row">{{offer.id}}</th>
+        <td>{{offer.user.username}}</td>
+        <td>{{offer.description}}</td>
+        <td>{{offer.user.address.city}} &nbsp;{{offer.user.address.state}}&nbsp;{{offer.user.address.zipCode}}</td>
+        <td> <button class="btn btn-success" disabled>Accept</button></td>
       </tr>
     </tbody>
   </table>
 </div>
-<!-- <app-ngbd-carousel-basic></app-ngbd-carousel-basic> -->
+
+<br>
+<br>
+<div class="container" *ngFor="let user of users" id="tableForOffers">
+  <table class="table table-sm">
+    <thead>
+      <tr>
+        <th scope="col">UserName</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>{{user.username}}</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+ <!-- <app-ngbd-carousel-basic></app-ngbd-carousel-basic> -->
+
