working on offer modal

--- a/Angular/eBarter/src/app/components/item-detail/item-detail.component.html
+++ b/Angular/eBarter/src/app/components/item-detail/item-detail.component.html
@@ -40,7 +40,7 @@
     <br>
     <app-ngbd-modal-config></app-ngbd-modal-config>
     <br>
-  <!-- <button class="btn btn-success" data-toggle="modal" id="SubmitOffer">Submit Offer</button> -->
+  <!-- <button class="btn btn-success" data-toggle="modal" id="SubmitOffer">Submit My Offer</button> -->
    </ul>
 </div>
 
