--- a/Angular/eBarter/src/app/components/ngbd-modal-config/ngbd-modal-config.component.html
+++ b/Angular/eBarter/src/app/components/ngbd-modal-config/ngbd-modal-config.component.html
@@ -6,14 +6,17 @@
     </button>
   </div>
   <div class="modal-body">
-    <form (ngSubmit)="onSubmit()">
+    <form #offerForm='ngForm'>
+      <h3>Offer from: {{bidder.username}}</h3>
+      <h3>To: {{sellerName}}</h3>
+      <h3>For: {{itemName}}</h3>
       Description
       <br>
-      <input type="text">
+      <input type="text" name='description'/>
       <br>
       Image Url
       <br>
-      <input type="text">
+      <input type="text" name='imgUrl'/>
       <br>
       <input type="hidden">
       <!-- //Below is the data we need for sending in a offer -->
@@ -31,7 +34,7 @@
     </form>
   </div>
   <div class="modal-footer">
-    <button type="button" class="btn btn-success" (click)="('Save click')">Submit</button>
+    <button type="button" class="btn btn-success" (click)='submitOffer(offerForm)'>Submit</button>
   </div>
 </ng-template>
 
