--- a/Angular/eBarter/src/app/components/homepage/homepage.component.html
+++ b/Angular/eBarter/src/app/components/homepage/homepage.component.html
@@ -62,15 +62,14 @@
       src="https://rukminim1.flixcart.com/image/332/398/watch/5/h/y/curren-8152-curren-original-imaecw9g7hqp85nw.jpeg?q=50"
       alt="Card image cap"href="#/" >
     <div class="card-body">
-      <ngb-rating [(rate)]="currentRate"></ngb-rating>
       <hr>
-      <pre>Rate: <b>{{currentRate}}</b></pre>
       <h5 class="card-title">{{item.id}}</h5>
       <p class="card-text">{{item.name}}</p>
       <p class="card-text">{{item.description}}</p>
       <a href="item" class="btn btn-success">
         <input type="hidden" value="{{item.id}}">
-        <span class="button--inner" (click)="popUpEnsureUserRegisters(item)">Offer Up</span>
+        <button class="btn btn-success"><a href="#item">Button Text</a></button>
+        <!-- <span class="button--inner" (click)="popUpEnsureUserRegisters(item)">Offer Up</span> -->
       </a>
       <br>
       <hr>
