--- a/Angular/eBarter/src/app/components/homepage/homepage.component.html
+++ b/Angular/eBarter/src/app/components/homepage/homepage.component.html
@@ -68,10 +68,9 @@
       <h5 class="card-title">{{item.id}}</h5>
       <p class="card-text">{{item.name}}</p>
       <p class="card-text">{{item.description}}</p>
-      <a href="item" class="btn btn-success">
         <input type="hidden" value="{{item.id}}">
-        <span class="button--inner" (click)="popUpEnsureUserRegisters(item)">Offer Up</span>
-      </a>
+        <button (click)='navItem(item)' class="btn btn-warning" id='register-button' type="submit">Make Offer</button>
+
       <br>
       <hr>
     </div>
