--- a/Angular/eBarter/src/app/components/items-won/items-won.component.html
+++ b/Angular/eBarter/src/app/components/items-won/items-won.component.html
@@ -1,4 +1,3 @@
-
 <br>
 <br>
 <br>
@@ -11,33 +10,40 @@
 <br>
 <h1>Test</h1>
 
-<div class="card-deck" style="width: 70rem;" *ngFor="let item of items">
+<!-- <div id="showOffersForItemsThisUserIsbiddingOn"class="card-deck" style="width: 70rem;" *ngFor="let item of items">
   <div class="card">
     <img class="card-img-top"
       src="https://rukminim1.flixcart.com/image/332/398/watch/5/h/y/curren-8152-curren-original-imaecw9g7hqp85nw.jpeg?q=50"
-      alt="Card image cap"href="#/" >
+      alt="Card image cap" href="#/">
     <div class="card-body">
       <hr>
-    <!-- item.offer.user  -->
-    <div *ngIf="item.offer.length > 0">
-      <!-- {{item.offer.length}} -->
-      <div class="card" *ngFor="let offer of item.offer">
-        <ul>
-          <li *ngIf="item.offer.user === isBidder">{{offer.user.id}}</li>
-        </ul>
+      <div *ngIf="item.offer.length > 0">
+        <div class="card" *ngFor="let offer of item.offer">
+          <ul>
+            <li *ngIf="offer.user.id == isBidder.id">{{item.name}}</li>
+            <li *ngIf="offer.user.id == isBidder.id">{{item.description}}</li>
+            <li *ngIf="offer.user.id == isBidder.id">{{offer.description}}</li>
+          </ul>
+        </div>
       </div>
-
-    </div>
-
-      <!-- <h5 class="card-title"  *ngIf='item.offer.user.id == isBidder.id'>{{item.id}}</h5> -->
-      <!-- <p class="card-text">{{item.name}}</p>
-      <p class="card-text">{{item.description}}</p> -->
-      <a href="item" class="btn btn-success">
-        <input type="hidden" value="{{item.id}}">
-        <span class="button--inner" (click)="popUpEnsureUserRegisters(item)">Offer Up</span>
-      </a>
       <br>
       <hr>
+    </div>
+  </div>
+</div> -->
+
+<div id="showOffersForItemsThisUserIsbiddingOn" class="card-deck" style="width: 70rem;" *ngFor="let item of items">
+  <div *ngIf="item.offer.length > 0">
+    <div *ngFor="let offer of item.offer">
+      <img class="card-img-top" *ngIf="offer.user.id == isBidder.id"
+        src="https://rukminim1.flixcart.com/image/332/398/watch/5/h/y/curren-8152-curren-original-imaecw9g7hqp85nw.jpeg?q=50"
+        alt="Card image cap" href="#/">
+      <span *ngIf="offer.user.id == isBidder.id">{{item.name}}</span>
+      <br>
+      <span *ngIf="offer.user.id == isBidder.id">{{item.description}}</span>
+      <br>
+      <span *ngIf="offer.user.id == isBidder.id">{{offer.description}}</span>
+      <br>
     </div>
   </div>
 </div>
